crates/quaffed/tests/snapshots/end_to_end__text_starting_with_a_dash_is_searched_after_a_double_dash.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "--"
    - "--verbose"
---
success: true
exit_code: 0
----- stdout -----
a.txt:1:3-1:11: --verbose

----- stderr -----
