crates/quaffed/tests/snapshots/end_to_end__with_no_arguments_it_says_nothing_is_implemented.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args: []
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
quaff 0.1.0: nothing is implemented yet
