crates/quaffed/tests/snapshots/end_to_end__with_no_project_a_scope_outside_the_current_directory_is_refused-2.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
    - sub
---
success: true
exit_code: 0
----- stdout -----
sub/b.txt:1:1-1:4: TODO

----- stderr -----
