crates/quaffed/tests/snapshots/end_to_end__with_no_project_root_it_searches_the_current_directory.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
---
success: true
exit_code: 0
----- stdout -----
b.txt:1:1-1:4: TODO

----- stderr -----
